--- a/whatsbot/package.json
+++ b/whatsbot/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
+    "mitt": "^3.0.1",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
