--- a/whatsbot/package.json
+++ b/whatsbot/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@next/font": "^14.2.15",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
