Ajustes visuais, correções e melhorias de layout, otimização de desempenho, implementaçao de teste unitarios no backend, adicionando aba conversas e filtro de busca e toda regra de negocio para a interface do usuário e integração com a API.

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 /node_modules
 /.wwebjs_auth
 /.wwebjs_cache
-
+/coverage
+whatsbot/src/components/Atendimentos copy.tsx
+whatsbot/src/app/(SPA)/mensagens/bkpPage.tsx
