--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "set NODE_ENV=test && jest"
   },
   "keywords": [],
   "author": "",
@@ -27,5 +27,8 @@
     "socket.io": "^4.8.1",
     "whatsapp-web.js": "^1.27.0",
     "whatwg-url": "^14.2.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
