--- a/whatsbot/package.json
+++ b/whatsbot/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.0.2",
     "@next/font": "^14.2.15",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
