--- a/whatsbot/package.json
+++ b/whatsbot/package.json
@@ -22,6 +22,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
